--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -63,8 +63,8 @@ jobs:
       run: |
         python --version
         python -m pip install --upgrade pip wheel
-        pip install --upgrade -r requirements.txt
-        pip install --upgrade -r builder/requirements.txt
+        pip install --upgrade -r requirements.txt --no-dependencies
+        pip install --upgrade -r builder/requirements.txt --no-dependencies
     - name: Build Windows standalone binary (32bit and legacy)
       run: python builder/package.py binary
     - name: Upload Windows standalone binary (32bit and legacy)
@@ -112,19 +112,18 @@ jobs:
       # We have to manually take a few steps:
       # 1.  Because building cryptography is hard, and we cannot force pip to fetch universal2 version we
       #     first install the x86 version (and it's dependencies) and then manually fetch the universal2 build
-      #     https://github.com/pyca/cryptography/issues/5918
-      # 2.  Due to PyObjC we cannot run pip on the main requirements without installing dependencies
-      # 3.  We need to build the PyInstaller bootloader:
+      #     https://github.com/pypa/pip/issues/5453
+      # 2.  We need to build the PyInstaller bootloader:
       #     https://github.com/pyinstaller/pyinstaller/issues/6235
       if: steps.cache-virtualenv.outputs.cache-hit != 'true'
       run: |
         python3 --version
         pip3 install --upgrade pip wheel
-        
-        pip3 install --upgrade -r requirements.txt --no-binary cffi
+    
+        pip3 install --upgrade -r requirements.txt --no-binary cffi --no-dependencies
         
         pip3 uninstall cryptography -y
-        pip3 download -r builder/osx/requirements.txt --platform macosx_10_12_universal2 --only-binary :all: --no-deps --dest .
+        pip3 download -r builder/osx/requirements.txt --platform macosx_10_12_universal2 --only-binary :all: --no-dependencies --dest .
         pip3 install -r builder/osx/requirements.txt --no-cache-dir --no-index --find-links .
 
         PYINSTALLER_COMPILE_BOOTLOADER=1 pip3 install --upgrade -r builder/requirements.txt --no-binary pyinstaller --no-dependencies
