--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -8,8 +8,12 @@ wrapt==1.15.0
 setuptools==68.2.2
 certifi
 
-# orjson does not support 32bit Windows, exclude it based on Python-version
-# This way we also test ujson on Python 3.8 in the CI-tests
+# Required on 32bit Windows, exclude it based on Python-version
+importlib_metadata==6.8.0; python_version < '3.10'
+importlib_resources==6.1.0; python_version < '3.10'
+zipp==3.17.0; python_version < '3.10'
+
+# orjson does not support 32bit Windows, also exclude based on Python-version
 orjson==3.9.9; python_version > '3.8'
 
 # For the Windows build
