--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ puremagic==1.15
 guessit==3.8.0
 babelfish==0.6.0
 rebulk==3.2.0
+requests
 
 # Recent cryptography versions require Rust. If you run into issues compiling this
 # SABnzbd will also work with older pre-Rust versions such as cryptography==3.3.2
