Build using old PyInstaller so virusscanners don't get upset

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -22,7 +22,8 @@
   "ignoreDeps": [
     "jaraco.text",
     "sabctools",
-    "werkzeug"
+    "werkzeug",
+    "pyinstaller"
   ],
   "packageRules": [
     {
