--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Main requirements
 # Note that not all sub-dependencies are listed, but only ones we know could cause trouble
+apprise==1.7.2
 sabctools==8.1.0
 cheetah3==3.2.6.post1
 cffi==1.16.0
@@ -18,7 +19,7 @@ more-itertools==10.2.0
 zc.lockfile==3.0.post1
 python-dateutil==2.8.2
 tempora==5.5.0
-pytz==2023.4
+pytz==2024.1
 sgmllib3k==1.0.0
 portend==3.2.0
 chardet==5.2.0
@@ -30,7 +31,7 @@ rebulk==3.2.0
 
 # Recent cryptography versions require Rust. If you run into issues compiling this
 # SABnzbd will also work with older pre-Rust versions such as cryptography==3.3.2
-cryptography==42.0.1
+cryptography==42.0.2
 
 # We recommend using "orjson" as it is 2x as fast as "ujson". However, it requires
 # Rust so SABnzbd works just as well with "ujson" or the Python built in "json" module
@@ -53,6 +54,16 @@ notify2==0.3.1; sys_platform != 'win32' and sys_platform != 'darwin'
 # See https://pycairo.readthedocs.io/en/latest/getting_started.html
 # Uncomment line below or manually install after installing requirements.
 # pygobject>=3.10.2; sys_platform != 'win32' and sys_platform != 'darwin'
+
+# PyYAML does not have binary packages for Mac Users
+PyYAML==6.0.1 --no-binary=PyYAML; sys_platform == 'darwin'
+PyYAML==6.0.1; sys_platform != 'darwin'
+
+# Apprise Requirements
+requests==2.31.0
+requests-oauthlib==1.3.1
+markdown==3.5.2
+paho-mqtt==1.6.1
 
 # Optional support for system power management on *nix.
 # Requires libdbus-1-dev to be installed.
