--- a/requirements.txt
+++ b/requirements.txt
@@ -49,19 +49,10 @@ pyobjc-framework-Cocoa==10.1; sys_platform == 'darwin'
 # Linux notifications
 notify2==0.3.1; sys_platform != 'win32' and sys_platform != 'darwin'
 
-# Optional support for *nix tray icon.
-# Note that pygobject depends on pycairo, which requires pkg-config and cairo headers.
-# See https://pycairo.readthedocs.io/en/latest/getting_started.html
-# Uncomment line below or manually install after installing requirements.
-# pygobject>=3.10.2; sys_platform != 'win32' and sys_platform != 'darwin'
-
-# PyYAML does not have binary packages for Mac Users
-PyYAML==6.0.1 --no-binary=PyYAML; sys_platform == 'darwin'
-PyYAML==6.0.1; sys_platform != 'darwin'
-
 # Apprise Requirements
 requests==2.31.0
 requests-oauthlib==1.3.1
+PyYAML==6.0.1
 markdown==3.5.2
 paho-mqtt==1.6.1
 
@@ -74,8 +65,11 @@ oauthlib==3.2.2
 PyJWT==2.8.0
 blinker==1.7.0
 
-# Markdown Requirements
-importlib-metadata==7.0.1
+# Optional support for *nix tray icon.
+# Note that pygobject depends on pycairo, which requires pkg-config and cairo headers.
+# See https://pycairo.readthedocs.io/en/latest/getting_started.html
+# Uncomment line below or manually install after installing requirements.
+# pygobject>=3.10.2; sys_platform != 'win32' and sys_platform != 'darwin'
 
 # Optional support for system power management on *nix.
 # Requires libdbus-1-dev to be installed.
