Ignore jaraco.collections updates in renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,6 +18,7 @@
   "ignoreDeps": [
     "jaraco.text",
     "jaraco.context",
+    "jaraco.collections",
     "sabctools",
     "werkzeug",
     "pyinstaller"
