Switch discord link to vanity link. Add binhex as docker maintainer entry

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -21,6 +21,7 @@ body:
       options:
         - linuxserver
         - hotio
+        - binhex
         - Other
   - type: textarea
     attributes:
