--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,7 +4,7 @@ contact_links:
     url: https://forums.sabnzbd.org/
     about: Support questions can be asked on our forums, Reddit or Discord server.
   - name: Discord
-    url: https://discord.gg/KQzDe7fvNU
+    url: https://discord.sabnzbd.org
     about: Support questions can be asked on our forums, Reddit or Discord server.
   - name: Reddit - r/sabnzbd
     url: https://www.reddit.com/r/sabnzbd
