--- a/tests/data/tavern/api_server_stats.yaml
+++ b/tests/data/tavern/api_server_stats.yaml
@@ -7,7 +7,7 @@ strict:
 stages:
   - name: server_stats (json output)
     request:
-      url: "http://{SAB_HOST}:{SAB_PORT}/sabnzbd/api"
+      url: "http://{SAB_HOST}:{SAB_PORT}/api"
       method: GET
       params:
         mode: server_stats
@@ -31,7 +31,7 @@ stages:
 
   - name: server_stats (xml output)
     request:
-      url: "http://{SAB_HOST}:{SAB_PORT}/sabnzbd/api"
+      url: "http://{SAB_HOST}:{SAB_PORT}/api"
       method: GET
       params:
         mode: server_stats
