--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -69,8 +69,8 @@ jobs:
       # We need the official Python, because the GA ones only support newer macOS versions
       # The deployment target is picked up by the Python build tools automatically
       # If updated, make sure to also set LSMinimumSystemVersion in SABnzbd.spec
-      PYTHON_VERSION: "3.12.3"
-      MACOSX_DEPLOYMENT_TARGET: "10.9"
+      PYTHON_VERSION: "3.12.6"
+      MACOSX_DEPLOYMENT_TARGET: "10.13"
       # We need to force compile for universal2 support
       CFLAGS: -arch x86_64 -arch arm64
       ARCHFLAGS: -arch x86_64 -arch arm64
@@ -95,14 +95,12 @@ jobs:
     - name: Install Python
       run: sudo installer -pkg ~/python.pkg -target /
     - name: Install Python dependencies
-      # We have to manually take a few steps:
-      # 1.  We need to build the PyInstaller bootloader:
-      #     https://github.com/pyinstaller/pyinstaller/issues/6235
+      # We have to manually compile some modules as they don't automatically fetch universal2 binaries
       run: |
         python3 --version
         pip3 install --upgrade pip wheel
         pip3 install --upgrade -r requirements.txt --no-binary cffi,CT3,PyYAML,charset_normalizer --no-dependencies
-        PYINSTALLER_COMPILE_BOOTLOADER=1 pip3 install --upgrade -r builder/requirements.txt --no-binary pyinstaller --no-dependencies
+        pip3 install --upgrade -r builder/requirements.txt --no-dependencies
     - name: Import macOS codesign certificates
       # Taken from https://github.com/Apple-Actions/import-codesign-certs/pull/27 (comments)
       env:
