Add Python 3.13 to CI tests

--- a/.github/workflows/integration_testing.yml
+++ b/.github/workflows/integration_testing.yml
@@ -31,18 +31,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
         python-architecture: ["x64"]
         name: ["Linux"]
         os: [ubuntu-latest]
         include:
           - name: macOS
             os: macos-latest
-            python-version: "3.12"
+            python-version: "3.13"
             python-architecture: "x64"
           - name: Windows
             os: windows-latest
-            python-version: "3.12"
+            python-version: "3.13"
             python-architecture: "x64"
           - name: Windows (32bit)
             os: windows-latest
