The `tests` folder was ignored by default by Renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -15,6 +15,7 @@
       "builder/release-requirements.txt"
     ]
   },
+  "ignorePaths": [],
   "ignoreDeps": [
     "jaraco.text",
     "jaraco.context",
