Build release using Python 3.13

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -23,8 +23,7 @@
     "jaraco.collections",
     "sabctools",
     "paho-mqtt",
-    "werkzeug",
-    "pyinstaller"
+    "werkzeug"
   ],
   "packageRules": [
     {
