WIP on release313

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pytz==2024.2
 sgmllib3k==1.0.0
 portend==3.2.0
 chardet==5.2.0
+pyunormalize==16.0.0
 PySocks==1.7.1
 puremagic==1.28
 guessit==3.8.0
