--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,6 +7,7 @@
   "schedule": [
     "before 8am on Monday"
   ],
+  "baseBranches": ["develop", "feature/uvicorn"],
   "pip_requirements": {
     "fileMatch": [
       "requirements.txt",
