Ignore package updates that are unsupported on Python 3.8

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -24,7 +24,9 @@
     "sabctools",
     "paho-mqtt",
     "werkzeug",
-    "pyinstaller"
+    "pyinstaller",
+    "zipp",
+    "blinker"
   ],
   "packageRules": [
     {
