More compatibility fixes for Python 3.8

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -24,9 +24,7 @@
     "sabctools",
     "paho-mqtt",
     "werkzeug",
-    "pyinstaller",
-    "zipp",
-    "blinker"
+    "pyinstaller"
   ],
   "packageRules": [
     {
