--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -5,12 +5,13 @@ packaging==24.1
 pyinstaller-hooks-contrib==2024.9
 altgraph==0.17.4
 wrapt==1.16.0
-setuptools==75.3.0
+setuptools # List version-less for Python 3.8 to just get latest supported
+setuptools==75.3.0; python_version > '3.8'
 
 # Required on 32bit Windows, exclude it based on Python-version
 importlib_metadata==8.5.0; python_version < '3.10'
 importlib_resources==6.4.5; python_version < '3.10'
-zipp==3.20.2; python_version < '3.10'
+zipp; python_version < '3.10' # List version-less for Python 3.8 to just get latest supported
 
 # orjson does not support 32bit Windows, also exclude based on Python-version
 orjson==3.10.11; python_version > '3.8'
