--- a/.github/workflows/integration_testing.yml
+++ b/.github/workflows/integration_testing.yml
@@ -32,30 +32,23 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
-        python-architecture: ["x64"]
         name: ["Linux"]
         os: [ubuntu-latest]
         include:
           - name: macOS
             os: macos-latest
             python-version: "3.13"
-            python-architecture: "x64"
           - name: Windows
             os: windows-latest
             python-version: "3.13"
-            python-architecture: "x64"
-          - name: Windows (32bit)
-            os: windows-latest
-            python-version: "3.8"
-            python-architecture: "x86"
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }} ${{ matrix.python-architecture }}
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        architecture:  ${{ matrix.python-architecture }}
+        architecture: "x64"
         cache: pip
         cache-dependency-path: "**/requirements.txt"
     - name: Install system dependencies
