--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -5,16 +5,7 @@ packaging==24.2
 pyinstaller-hooks-contrib==2024.10
 altgraph==0.17.4
 wrapt==1.17.0
-setuptools # List version-less for Python 3.8 to just get latest supported
-setuptools==75.6.0; python_version > '3.8'
-
-# Required on 32bit Windows, exclude it based on Python-version
-importlib_metadata==8.5.0; python_version < '3.10'
-importlib_resources==6.4.5; python_version < '3.10'
-zipp; python_version < '3.10' # List version-less for Python 3.8 to just get latest supported
-
-# orjson does not support 32bit Windows, also exclude based on Python-version
-orjson==3.10.12; python_version > '3.8'
+setuptools==75.6.0
 
 # For the Windows build
 pefile==2024.8.26; sys_platform == 'win32'
