--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ cryptography==44.0.2
 # We recommend using "orjson" as it is 2x as fast as "ujson". However, it requires
 # Rust so SABnzbd works just as well with "ujson" or the Python built in "json" module
 ujson==5.10.0
-orjson==3.10.16
+orjson==3.10.16; python_version > '3.8'
 
 # Windows system integration
 pywin32==310; sys_platform == 'win32'
