--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -114,7 +114,7 @@ jobs:
     - name: Upload macOS binary
       uses: actions/upload-artifact@v4
       with:
-        path: "*-osx.dmg"
+        path: "*-macos.dmg"
         name: macOS binary
 
   release:
