Allow renovate to update winrt again

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -23,12 +23,7 @@
     "jaraco.collections",
     "sabctools",
     "paho-mqtt",
-    "werkzeug",
-    "winrt-runtime",
-    "winrt-Windows.Data.Xml.Dom",
-    "winrt-Windows.Foundation",
-    "winrt-Windows.Foundation.Collections",
-    "winrt-Windows.UI.Notifications"
+    "werkzeug"
   ],
   "packageRules": [
     {
