Add curl as snapcraft par2cmdline build-package

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -75,6 +75,7 @@ parts:
     plugin: autotools
     build-packages:
       - jq
+      - curl
     build-environment:
       - LDFLAGS: -s
     override-pull: |
