--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -133,12 +133,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: snapcore/action-build@v1
+        name: Build snap
         id: snapcraft
-      - name: Upload snap artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: Snap package (${{ matrix.linux_arch }})
-          path: ${{ steps.snapcraft.outputs.snap }}
       - name: Test snap installation
         run: |
           sudo snap install --dangerous *.snap
@@ -146,11 +142,22 @@ jobs:
           # Basic smoke test - check that the binary exists and can show help
           timeout 10s snap run sabnzbd --help || true
           sudo snap remove sabnzbd
+      - name: Upload snap
+        uses: actions/upload-artifact@v4
+        with:
+          name: Snap package (${{ matrix.linux_arch }})
+          path: ${{ steps.snapcraft.outputs.snap }}
+      - name: Publish snap
+        uses: snapcore/action-publish@v1
+        with:
+          store_login: ${{ secrets.SNAP_TOKEN }}
+          snap: ${{ steps.snapcraft.outputs.snap }}
+          release: edge
 
   release:
     name: Prepare Release
     runs-on: ubuntu-latest
-    needs: [build_windows, build_macos, build-snap]
+    needs: [build_windows, build_macos]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
