--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -149,6 +149,8 @@ jobs:
           path: ${{ steps.snapcraft.outputs.snap }}
       - name: Publish snap
         uses: snapcore/action-publish@v1
+        env:
+          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAP_TOKEN }}
         with:
           store_login: ${{ secrets.SNAP_TOKEN }}
           snap: ${{ steps.snapcraft.outputs.snap }}
