Run CI Tests on macOS 13
See #3131

--- a/.github/workflows/integration_testing.yml
+++ b/.github/workflows/integration_testing.yml
@@ -36,7 +36,7 @@ jobs:
         os: [ubuntu-latest]
         include:
           - name: macOS
-            os: macos-latest
+            os: macos-13
             python-version: "3.13"
           - name: Windows
             os: windows-latest
